2018-01-26  Ben Wagner  <bungeman@google.com>

	* src/ftmulti.c (LOG) [DEBUG]: Modernize.

2018-01-08  Werner Lemberg  <wl@gnu.org>

	* Version 2.9 released.
	=======================


	Tag sources with `VER-2-9.

	* README: Updated.
	* src/*.1: Updated.
	* src/ftinspect/ftinspect.pro: Updated.

2018-01-07  Werner Lemberg  <wl@gnu.org>

	* Makefile (LINK_LIBS): Add `LIB_CLOCK_GETTIME' (#52824).

2018-01-06  Werner Lemberg  <wl@gnu.org>

	Use new `FT_Done_Var_MM' function.

	* src/ftdump.c (Print_MM_Axes), src/ftgrid.c (main), src/ftmulti.c
	(main): Do it.

2017-12-31  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Fix compiler warnings and run-time errors.

	* src/ttdebug.c (Cur_U_Line): Remove useless casts to `unsigned' and fix
	the necessary ones.
	(RunIns): Protect `FT_MEM_COPY' calls.

2017-12-30  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Key `K' shows full stack.

	* src/ttdebug.c (RunIns): Update help display.
	Handle key `K'.

2017-12-30  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Key `I' toggles hexadecimal/decimal numbers display.

	* src/ttdebug.c (use_hex): New global variable.
	(Cur_U_Line): Use it.
	(RunIns): Use it.
	Update help display.
	Handle key `I'.

2017-12-27  Werner Lemberg  <wl@gnu.org>

	Fix compiler warnings.

	* src/ftcommon.c, src/ftcommon.h
	(FTDemo_Event_{Cff,Type1,T1cid}_Hinting_Engine_Change): Change
	return type to `int'.

	* src/ftdiff.c (HINTING_ENGINE_MAX): Removed.
	* src/ftgrid.c, src/ftmulti.c, src/ftview.c (N_HINTING_ENGINES):
	Removed.

2017-12-16  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* bin/.gitignore: Ignore almost everything.

2017-12-14  Ewald Hew  <ewaldhew@gmail.com>
	    Werner Lemberg  <wl@gnu.org>

	Finish hinting engine selection code for Type 1 and CID fonts.

	* src/ftview.c (event_cff_hinting_engine_change,
	event_type1_hinting_engine_change,
	event_t1cid_hinting_engine_change): Moved and renamed to...

	* src/ftcommon.c (FTDemo_Event_Cff_Hinting_Engine_Change,
	FTDemo_Event_Type1_Hinting_Engine_Change,